# CitationNavigator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
app/: config.py  db.py  routes.py
app/agents/: __init__.py  _client.py  reasoner.py  router.py  summariser.py
app/graph/: __init__.py  builder.py  openalex.py  renderer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  data.js  index.css
frontend/src/components/: Header.jsx  PaperShelf.jsx  ResultCard.jsx  icons.jsx
frontend/src/hooks/: useTheme.js
static/: index.html
static/assets/: index-BlKUKhu8.js  index-LW433VfD.css
templates/: graph.html
