[project]
name = "scholargraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "networkx>=3.6.1",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.2.2",
    "azure-ai-projects>=1.0.0b11,<2.0.0",
    "azure-ai-agents>=1.0.0b11,<2.0.0",
    "azure-identity>=1.19.0",
    "azure-core>=1.32.0",
    "psycopg2-binary>=2.9.12",
]
